# chessbot

./: .gitignore  CMakeLists.txt  README.md
src/: main.cpp
src/app/: Application.cpp  Application.hpp
src/chess/: Board.cpp  Board.hpp  Fen.cpp  Fen.hpp  PositionValidator.cpp  PositionValidator.hpp
src/engine/: IUciEngine.hpp  StockfishProcess.cpp  StockfishProcess.hpp  UciParser.cpp  UciParser.hpp
src/infrastructure/: Configuration.cpp  Configuration.hpp  Logger.cpp  Logger.hpp
src/platform/: DesktopCapture.cpp  IDesktopCapture.hpp
src/ui/: CalibrationOverlay.cpp  CalibrationOverlay.hpp  OverlayWidget.cpp  OverlayWidget.hpp  SettingsWindow.cpp  SettingsWindow.hpp  StatusWindow.cpp  StatusWindow.hpp
src/vision/: BoardCalibration.cpp  BoardCalibration.hpp  BoardDetector.cpp  BoardDetector.hpp  FrameStabilityDetector.cpp  FrameStabilityDetector.hpp  IPieceRecognizer.hpp  ScreenCapture.cpp  ScreenCapture.hpp  TemplatePieceRecognizer.cpp  TemplatePieceRecognizer.hpp
tests/: CMakeLists.txt  test_fen.cpp  test_uci_parser.cpp
